# evidencegraph

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 0001_phase1_collections_documents.py  0002_phase2_parsing_chunking.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: dependencies.py  router.py
backend/app/chunking/: __init__.py  config.py  errors.py  fixed.py  persistence.py  schemas.py  section_aware.py  service.py  tokenizer.py  types.py  windowing.py
backend/app/citations/: __init__.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/documents/: __init__.py  validation.py
backend/app/embeddings/: __init__.py
backend/app/evaluation/: __init__.py
backend/app/generation/: __init__.py
backend/app/ingestion/: __init__.py  dispatcher.py  orchestrator.py  tasks.py  types.py
backend/app/models/: __init__.py  chunk.py  collection.py  document.py
backend/app/parsing/: __init__.py  errors.py  intermediate.py  loader.py  normalization.py  parser.py  schemas.py  sections.py
backend/app/reranking/: __init__.py
backend/app/retrieval/: __init__.py
backend/app/schemas/: __init__.py  chunk.py  collection.py  document.py  (+1 more)
backend/tests/: conftest.py  pdf_factory.py  test_health.py  test_ingestion_status_primitives.py  test_phase1_api.py  test_phase2_processing.py
(+41 files in other folders)
