[project]
name = "evidencegraph-backend"
version = "0.1.0"
description = "EvidenceGraph FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2.0",
    "boto3>=1.35,<2.0",
    "celery[redis]>=5.4,<6.0",
    "fastapi[standard]>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-multipart>=0.0.20,<1.0",
    "sqlalchemy>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "integration: requires the running Docker Compose Phase 1 services",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["app", "tests", "alembic"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
files = ["app"]
python_version = "3.12"
strict = true
warn_unreachable = true
